--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 # default path: h2-console
-spring.h2.console.path=/h2-ui
+#spring.h2.console.path=/h2-ui
  
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/bytecaptain
-#spring.datasource.username=root
-#spring.datasource.password=Lchblade15!
+spring.datasource.url=jdbc:mysql://localhost:3306/books
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 springdoc.api-docs.path=/api-docs
