--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-application.properties
+src/main/resources/application.properties
+src/test/resources/application-test.properties
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
